api: add wallet seed endpoint; docker: disable auto-mining
